# precision-genomics-agent-platform

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.mcp  Dockerfile.ml  Dockerfile.trainer  Dockerfile.worker  MIGRATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-gcp.yml  deploy-pulumi.yml  security-scan.yml
agent_skills/: __init__.py  biomarker_discovery.py  cross_omics_integration.py  literature_grounding.py  sample_qc.py
api/: __init__.py  main.py
api/middleware/: audit.py  auth.py
api/routes/: analysis.py  biomarkers.py  workflows.py
core/: __init__.py  availability.py  classifier.py  config.py  constants.py  cross_omics_matcher.py  data_loader.py  database.py  experiment_tracker.py  feature_selection.py  feature_store.py  gpu_classifier.py  imputation.py  logging.py  model_registry.py  models.py  pipeline.py  secrets.py  sharded_distance.py  storage.py  synthetic.py  vertex_training.py
docs/: ADVANCED_ML_INTEGRATION.md  ANTHROPIC_ALIGNMENT.md  ARCHITECTURE.md  GCP_DEPLOYMENT.md  INTENT_WORKFLOW.md  SCIENTIFIC_METHODOLOGY.md  SYNTHETIC_DATA_STRATEGY.md  TECHNICAL_WRITEUP.md  TEMPORAL_TO_GCP_WORKFLOWS_MIGRATION.md  precision-genomics-agent-platform-IMPLEMENTATION-PLAN-v3.md
dspy_modules/: autoprompt_examples.py  biomarker_discovery.py  compile.py  feature_interpret.py  metrics.py  regulatory_report.py  sample_qc.py
evals/: __init__.py  benchmark_comparison.py  biological_validity.py  hallucination_detection.py  reproducibility.py  slm_eval.py
evals/fixtures/: known_msi_signatures.json
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  config.py  requirements.txt
infra-ts/: Pulumi.dev.yaml  Pulumi.yaml  config.ts  index.ts  package.json  tsconfig.json
infra-ts/components/: cache.ts  cloudRunService.ts  database.ts  networking.ts  registry.ts  secrets.ts  storage.ts  vertexAi.ts  workflows.ts
infra-ts/policies/: genomicsPolicies.ts  index.ts
infra/automation/: deploy_on_model_retrain.py  ephemeral_env.py  intent_infra.py
infra/components/: __init__.py  cache.py  cloud_run_service.py  database.py  networking.py  registry.py  secrets.py  storage.py  vertex_ai.py  workflows.py
infra/policies/: __main__.py  genomics_policies.py
infra/tests/: test_components.py
intent-controller/: Dockerfile  Makefile  go.mod  go.sum
intents/: __init__.py  assurance.py  controller.py  infra_resolver.py  models.py  schemas.py  service.py  types.py
mcp_server/: __init__.py  server.py
mcp_server/schemas/: __init__.py  intents.py  omics.py
mcp_server/tools/: availability_check.py  biomarker_selector.py  classifier.py  data_loader.py  evaluator.py  explain_features_local.py  explainer.py  impute_missing.py  intent_manager.py  intent_status.py  match_cross_omics.py
ml_service/: main.py
prompts/: biomarker_discovery.md  feature_interpretation.md  regulatory_report.md  sample_qc_analysis.md
scripts/: compile_dspy.py  demo.py  encoder_train_entrypoint.py  slm_train_entrypoint.py  vertex_train_entrypoint.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_intents_assurance.py  test_intents_controller.py  test_intents_models.py
tests/test_agent_skills/: test_biomarker_discovery.py  test_cross_omics.py  test_literature_grounding.py  test_sample_qc.py
tests/test_api/: test_analysis_routes.py  test_biomarker_routes.py  test_middleware.py  test_workflow_routes.py
training/: data_builder.py  explainer.py  expression_encoder.py  finetune_slm.py  format_utils.py  gpu_configs.py  train_encoder_ddp.py
web/: .env.example  Dockerfile  next.config.ts  package.json
workflows/: __init__.py  activity_service.py  biomarker_discovery.py  config.py  local_runner.py  progress.py  sample_qc.py  schemas.py  worker.py
(+114 files in other folders)
